--- a/blockchainexplorerfront/blockDetail.html
+++ b/blockchainexplorerfront/blockDetail.html
@@ -27,7 +27,7 @@
     <script src="assets/js/vue.js"></script>
     <script src="assets/js/elementui.js"></script>
     <script src="assets/js/axios.min.js"></script>
-    <script src="viewmodels/blockDetail.js"></script>
+    <script src="viewmodels/BlockDetail.js"></script>
     
 </body>
 
